refactor: improve Java 8 compatibility by replacing modern syntax with legacy alternatives throughout the codebase